--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nuxt": "^3.3.2"
   },
   "dependencies": {
-    "@nuxtjs/robots": "^3.0.0"
+    "@nuxtjs/robots": "^3.0.0",
+    "@picocss/pico": "^1.5.7"
   }
 }
