--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxtjs/robots": "^3.0.0",
-    "@picocss/pico": "^1.5.7"
+    "@picocss/pico": "^1.5.7",
+    "nuxt-icons": "^3.2.1"
   }
 }
